Updated with new details

--- a/web_frameworks/portfolio_server/templates/about.html
+++ b/web_frameworks/portfolio_server/templates/about.html
@@ -64,19 +64,47 @@
             <div class="col-md-10 col-md-offset-1">
               <div class="row">
                 <div class="col-xs-12 col-md-6">
-                  <h3>Consectetur adipiscing elit</h3>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas luctus at sem quis varius. 
-                  Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Cras ultrices hendrerit nisl.</p>
-                  <h3>Ut enim ad minim </h3>
-                  <p>Duis aute irure dolor in reprehenderit in voluptate velit esse
-                  cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-                  proident, sunt in culpa qui officia deserunt mollit anim id est laborum. 
-                  <h3>Maecenas luctus at sem quis varius</h3>
+                  <h3>Intro</h3>
                   <p>
-                  Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Phasellus iaculis magna sagittis elit sagittis, at hendrerit lorem venenatis. Morbi accumsan iaculis blandit. Cras ultrices hendrerit nisl.</p>
+                    A graduate Astrophysicist, that decided to take a leap of faith and persue a career in Data Analytics/Science
+                    with the purpose of expanding my skills in mathematical analysis and programming.
+                    Some of the University projects I have worked on were:
+                    <ol>
+                      <li>Gravitational Waves Data Analysis - Posterior Mass Determination Using Bayesian Statistics</li>
+                      <li>Binary Black Hole model Selection with Bayesian Statistics</li>
+                      <li>Literature Report - Dark Energy and Dark Matter</li>
+                    </ol>
+
+                  </p>
                 </div>
                 <div class="col-xs-12 col-md-6">
-                  <img src="{{ url_for('static', filename='assets/images/profil.jpg') }}" class="img-responsive" alt="">
+                    <img src="{{ url_for('static', filename='assets/images/profil.jpg') }}" class="img-responsive" alt="">
+                </div>
+                <div class="col-xs-12 col-l-6">
+                  <h3>Career as a Data Analyst</h3>
+                  <p> During my 2 years as a data analyst, I successfully managed to develop and expand my skills as a
+                    Data Analyst.
+                    Assisted in developing dashboards and automated data mining processes, and with my team,
+                    we were the backbone of the effort of transitioning excel based databases to PostgreSQL
+                    Cloud hosted databases.
+                    Building the architecture from scratch and deploying various pipelines
+                    in order to safely migrate the excel tables in to our new Structured Database.
+                    Then finding and implementing third party tools
+                    , in order to design custom applications, that enabled non-technical analysts to perform CRUD
+                    operations to the Database, without having to type a single line of SQL!!!
+                    During the last two years, I was essential in the development of our company's tech
+                    stack, and developed skills in tools like GCP, AWS, Airflow, Kubernetes, Docker and Git Submodules.
+                  </p>
+                </div>
+                <div class="col-xs-12 col-l-6">
+                  <h3>Out of work Hobbies</h3>
+                  <p>
+                    Generally an active person, with particular interest in indoor climbing, hiking and surfing. I enjoy my weekly
+                    workout routines, and focus on callisthenics and body-weight form of training. I enjoy music, and sometimes
+                    practice playing the guitar, although I am getting a bit rusty at that. Depending on lockdown restrictions,
+                    I enjoy meeting up with friends, and meeting new people. Eagerly waiting for travel restrictions to ease off,
+                    so that I can continue on my quest to travel to as many countries as possible, currently at 18.
+                  </p>
                 </div>
               </div>
             </div>
