--- a/web_frameworks/portfolio_server/templates/contact.html
+++ b/web_frameworks/portfolio_server/templates/contact.html
@@ -11,7 +11,7 @@
 
   <!-- Disable tap highlight on IE -->
   <meta name="msapplication-tap-highlight" content="no">
-  
+
   <link rel="apple-touch-icon" sizes="180x180" href="{{ url_for('static', filename='assets/apple-icon-180x180.png') }}">
   <link href="{{ url_for('static', filename='assets/favicon.ico') }}" rel="icon">
 
@@ -94,10 +94,10 @@
                       <a href="http://www.facebook.com" title="" class="fa-icon">
                         <i class="fa fa-facebook"></i>
                       </a>
-                      <a href="http://www.twitter.com" title="" class="fa-icon">
-                        <i class="fa fa-twitter"></i>
+                      <a href="https://github.com/constantinos-spanachis" title="" class="fa-icon">
+                        <i class="fa fa-github"></i>
                       </a>
-                      <a href="http://www.linkedin.com" title="" class="fa-icon">
+                      <a href="https://www.linkedin.com/in/constantinos-spanachis/" title="" class="fa-icon">
                         <i class="fa fa-linkedin"></i>
                       </a>
 
