--- a/web_frameworks/portfolio_server/templates/works.html
+++ b/web_frameworks/portfolio_server/templates/works.html
@@ -57,7 +57,7 @@
       <div class="col-sm-8 col-sm-offset-2 section-container-spacer">
         <div class="text-center">
           <h1 class="h2">02 : Works</h1>
-          <p>Nulla facilisi. Vivamus vestibulum, elit in scelerisque ultricies, nisl nunc pulvinar ligula, id sodales arcu sapien in nisi. Quisque libero enim, mattis non augue posuere, venenatis dapibus urna.</p>
+          <p>Explore some of the side projects that I've created. Share the love if you think they are cool by giving them a star in github 😊</p>
         </div>
       </div>
 
@@ -75,9 +75,9 @@
                       </a>
                       <div class="card-container card-container-lg">
                         <h4>001/006</h4>
-                        <h3>Fringilla sit amet</h3>
-                        <p>Nulla facilisi. Vivamus vestibulum, elit in scelerisque ultricies.</p>
-                        <a href="./work.html" title="" class="btn btn-default">Discover</a>
+                        <h3>Password Check app.</h3>
+                        <p>An python package that checks if your password has been compromised ("pwned") before 👀</p>
+                        <a href="https://github.com/constantinos-spanachis/passwordChecker" title="" class="btn btn-default">Check in Github</a>
                       </div>
                     </div>
                     <div class="col-sm-4">
@@ -86,9 +86,9 @@
                       </a>
                       <div class="card-container card-container-lg">
                         <h4>002/006</h4>
-                        <h3>Nulla scelerisque</h3>
-                        <p>Proin pharetra metus id iaculis dignissim. In aliquet lorem ut ex ullamcorper.</p>
-                        <a href="./work.html" title="" class="btn btn-default">Discover</a>
+                        <h3>The Game of Life</h3>
+                        <p>Are you familiar with Cownay's <a href="http//en.wikipedia.org/wiki/Conway%27s_Game_of_Life">game of life?</a>? Play it here!!</p>
+                        <a href="https://github.com/constantinos-spanachis/the_Game_of_life" title="" class="btn btn-default">Check in Github</a>
                       </div>
                     </div>
                     <div class="col-sm-4">
@@ -97,9 +97,9 @@
                       </a>
                       <div class="card-container card-container-lg">
                         <h4>003/006</h4>
-                        <h3>Vivamus vestibulum</h3>
-                        <p>Fusce sed hendrerit augue, a rhoncus velit. In non lorem mattis, tempor sem sit amet.</p>
-                        <a href="./work.html" title="" class="btn btn-default">Discover</a>
+                        <h3>Twitter API</h3>
+                        <p>Want to check how you can create a bot using Twitter's API? (Please use responsibly 😆)</p>
+                        <a href="https://github.com/constantinos-spanachis/twitter_api" title="" class="btn btn-default">Check in Github</a>
                       </div>
                     </div>
                     
