--- a/portfolio_server/templates/works.html
+++ b/portfolio_server/templates/works.html
@@ -74,7 +74,7 @@
                         <img src="{{ url_for('static', filename='assets/images/work01-hover.jpg') }}" alt="" class="img-responsive">
                       </a>
                       <div class="card-container card-container-lg">
-                        <h4>001/006</h4>
+                        <h4>001/004</h4>
                         <h3>Password Check app.</h3>
                         <p>An python package that checks if your password has been compromised ("pwned") before 👀</p>
                         <a href="https://github.com/constantinos-spanachis/passwordChecker" title="" class="btn btn-default">Check in Github</a>
@@ -85,7 +85,7 @@
                         <img src="{{ url_for('static', filename='assets/images/work02-hover.jpg') }}" alt="" class="img-responsive">
                       </a>
                       <div class="card-container card-container-lg">
-                        <h4>002/006</h4>
+                        <h4>002/004</h4>
                         <h3>The Game of Life</h3>
                         <p>Are you familiar with Cownay's <a href="http//en.wikipedia.org/wiki/Conway%27s_Game_of_Life">game of life?</a>? Play it here!!</p>
                         <a href="https://github.com/constantinos-spanachis/the_Game_of_life" title="" class="btn btn-default">Check in Github</a>
@@ -96,7 +96,7 @@
                         <img src="{{ url_for('static', filename='assets/images/work03-hover.jpg') }}" alt="" class="img-responsive">
                       </a>
                       <div class="card-container card-container-lg">
-                        <h4>003/006</h4>
+                        <h4>003/004</h4>
                         <h3>Twitter API</h3>
                         <p>Want to check how you can create a bot using Twitter's API? (Please use responsibly 😆)</p>
                         <a href="https://github.com/constantinos-spanachis/twitter_api" title="" class="btn btn-default">Check in Github</a>
@@ -114,35 +114,35 @@
                       <img src="{{ url_for('static', filename='assets/images/work02-hover.jpg') }}" alt="Image" class="img-responsive">
                     </a>
                     <div class="card-container">
-                      <h4>004/006</h4>
-                      <h3>Nulla scelerisque</h3>
-                      <p>Proin pharetra metus id iaculis dignissim. In aliquet lorem ut ex ullamcorper.</p>
-                      <a href="./work.html" class="btn btn-default">Discover</a>
+                      <h4>004/004</h4>
+                      <h3>My Portfolio</h3>
+                      <p>The code behind my portfolio website.</p>
+                      <a href="https://github.com/constantinos-spanachis/my_portfolio" title="" class="btn btn-default">Check in Github</a>
                     </div>
                   </div>
-                   <div class="col-sm-4">
-                      <a href="./work.html" class="black-image-project-hover">
-                        <img src="{{ url_for('static', filename='assets/images/work01-hover.jpg') }}" alt="Image" class="img-responsive">
-                      </a>
-                      <div class="card-container">
-                        <h4>005/006</h4>
-                        <h3>Fringilla sit amet</h3>
-                        <p>Nulla facilisi. Vivamus vestibulum, elit in scelerisque ultricies.</p>
-                        <a href="./work.html" class="btn btn-default">Discover</a>
-                      </div>
-                    </div>
-                    
-                    <div class="col-sm-4">
-                      <a href="./work.html" class="black-image-project-hover">
-                        <img src="{{ url_for('static', filename='assets/images/work03-hover.jpg') }}" alt="Image" class="img-responsive">
-                      </a>
-                      <div class="card-container">
-                        <h4>006/006</h4>
-                        <h3>Vivamus vestibulum</h3>
-                        <p>Fusce sed hendrerit augue, a rhoncus velit. In non lorem mattis, tempor sem sit amet.</p>
-                        <a href="./work.html" class="btn btn-default">Discover</a>
-                      </div>
-                    </div>
+<!--                   <div class="col-sm-4">-->
+<!--                      <a href="./work.html" class="black-image-project-hover">-->
+<!--                        <img src="{{ url_for('static', filename='assets/images/work01-hover.jpg') }}" alt="Image" class="img-responsive">-->
+<!--                      </a>-->
+<!--                      <div class="card-container">-->
+<!--                        <h4>005/004</h4>-->
+<!--                        <h3>Fringilla sit amet</h3>-->
+<!--                        <p>Nulla facilisi. Vivamus vestibulum, elit in scelerisque ultricies.</p>-->
+<!--                        <a href="./work.html" class="btn btn-default">Discover</a>-->
+<!--                      </div>-->
+<!--                    </div>-->
+<!--                    -->
+<!--                    <div class="col-sm-4">-->
+<!--                      <a href="./work.html" class="black-image-project-hover">-->
+<!--                        <img src="{{ url_for('static', filename='assets/images/work03-hover.jpg') }}" alt="Image" class="img-responsive">-->
+<!--                      </a>-->
+<!--                      <div class="card-container">-->
+<!--                        <h4>004/004</h4>-->
+<!--                        <h3>Vivamus vestibulum</h3>-->
+<!--                        <p>Fusce sed hendrerit augue, a rhoncus velit. In non lorem mattis, tempor sem sit amet.</p>-->
+<!--                        <a href="./work.html" class="btn btn-default">Discover</a>-->
+<!--                      </div>-->
+<!--                    </div>-->
                     
                 </div>
                 <!--/row-->
