--- a/portfolio_server/templates/contact.html
+++ b/portfolio_server/templates/contact.html
@@ -77,12 +77,12 @@
                     </div>
                     <div class="col-md-5 address-container">
                       <ul class="list-unstyled">
-                        <li>
-                          <span class="fa-icon">
-                            <i class="fa fa-phone" aria-hidden="true"></i>
-                          </span>
-                          + 44 7908373201
-                        </li>
+<!--                        <li>-->
+<!--                          <span class="fa-icon">-->
+<!--                            <i class="fa fa-phone" aria-hidden="true"></i>-->
+<!--                          </span>-->
+<!--                          + 44 7908373201-->
+<!--                        </li>-->
                         <li>
                           <span class="fa-icon">
                             <i class="fa fa-at" aria-hidden="true"></i>
