Removed href tags from images

--- a/portfolio_server/templates/works.html
+++ b/portfolio_server/templates/works.html
@@ -70,9 +70,9 @@
                 <div class="row">
                     <div class="col-sm-4">
 
-                      <a href="./work.html" title="" class="black-image-project-hover">
+<!--                      <a href="./work.html" title="" class="black-image-project-hover">-->
                         <img src="{{ url_for('static', filename='assets/images/work01-hover.jpg') }}" alt="" class="img-responsive">
-                      </a>
+<!--                      </a>-->
                       <div class="card-container card-container-lg">
                         <h4>001/004</h4>
                         <h3>Password Check app.</h3>
@@ -81,9 +81,9 @@
                       </div>
                     </div>
                     <div class="col-sm-4">
-                      <a href="./work.html" title="" class="black-image-project-hover">
+<!--                      <a href="./work.html" title="" class="black-image-project-hover">-->
                         <img src="{{ url_for('static', filename='assets/images/work02-hover.jpg') }}" alt="" class="img-responsive">
-                      </a>
+<!--                      </a>-->
                       <div class="card-container card-container-lg">
                         <h4>002/004</h4>
                         <h3>The Game of Life</h3>
@@ -92,9 +92,9 @@
                       </div>
                     </div>
                     <div class="col-sm-4">
-                      <a href="./work.html" title="" class="black-image-project-hover">
+<!--                      <a href="./work.html" title="" class="black-image-project-hover">-->
                         <img src="{{ url_for('static', filename='assets/images/work03-hover.jpg') }}" alt="" class="img-responsive">
-                      </a>
+<!--                      </a>-->
                       <div class="card-container card-container-lg">
                         <h4>003/004</h4>
                         <h3>Twitter API</h3>
@@ -110,9 +110,9 @@
             <div class="item">
                 <div class="row">
                   <div class="col-sm-4">
-                    <a href="./work.html" class="black-image-project-hover">
+<!--                    <a href="./work.html" class="black-image-project-hover">-->
                       <img src="{{ url_for('static', filename='assets/images/work02-hover.jpg') }}" alt="Image" class="img-responsive">
-                    </a>
+<!--                    </a>-->
                     <div class="card-container">
                       <h4>004/004</h4>
                       <h3>My Portfolio</h3>
