Fixed about me extension

--- a/portfolio_server/templates/about.html
+++ b/portfolio_server/templates/about.html
@@ -66,9 +66,9 @@
                 <div class="col-xs-12 col-md-6">
                   <h3>Intro</h3>
                   <p>
-                    A graduate Astrophysicist, that decided to take a leap of faith and persue a career in Data Analytics/Science
+                    A graduate Astrophysicist, who decided to take a leap of faith and pursue a career in Data Analytics/Science
                     with the purpose of expanding my skills in mathematical analysis and programming.
-                    Some of the University projects I have worked on were:
+                    Some of the University projects I have worked on are:
                     <ol>
                       <li>Gravitational Waves Data Analysis - Posterior Mass Determination Using Bayesian Statistics</li>
                       <li>Binary Black Hole model Selection with Bayesian Statistics</li>
@@ -82,26 +82,26 @@
                 </div>
                 <div class="col-xs-12 col-l-6">
                   <h3>Career as a Data Analyst</h3>
-                  <p> During my 2 years as a data analyst, I successfully managed to develop and expand my skills as a
-                    Data Analyst.
-                    Assisted in developing dashboards and automated data mining processes, and with my team,
+                  <p> During my 2 years as a data analyst, I have never stopped trying to advance and develop my skills.
+                    I have assisted in developing dashboards and automated data mining processes, and with my team,
                     we were the backbone of the effort of transitioning excel based databases to PostgreSQL
-                    Cloud hosted databases.
-                    Building the architecture from scratch and deploying various pipelines
-                    in order to safely migrate the excel tables in to our new Structured Database.
-                    Then finding and implementing third party tools
-                    , in order to design custom applications, that enabled non-technical analysts to perform CRUD
-                    operations to the Database, without having to type a single line of SQL!!!
-                    During the last two years, I was essential in the development of our company's tech
-                    stack, and developed skills in tools like GCP, AWS, Airflow, Kubernetes, Docker and Git Submodules.
+                    Cloud hosted databases, building the architecture from scratch and deploying various pipelines
+                    in order to safely migrate the excel tables into our new Structured Database.
+                    Then, by finding and implementing third party tool solutions, we designed custom applications,
+                    that enabled non-technical analysts to perform CRUD operations to the Database, without having to
+                    type a single line of SQL!!! During the last two years, I was essential in the development of our company's tech
+                    stack, and developed skills in tools like GCP, AWS, Airflow, Kubernetes, Docker, Retool and Git Submodules.
+                    Finally, since January I was given the opportunity to manage our two new Apprentices, with whom we
+                    managed to create an MVP project, that visualizes our datalake timeseries using DASH, and gives the
+                    ability to create custom dashboards and store them locally.
                   </p>
                 </div>
                 <div class="col-xs-12 col-l-6">
                   <h3>Out of work Hobbies</h3>
                   <p>
                     Generally an active person, with particular interest in indoor climbing, hiking and surfing. I enjoy my weekly
-                    workout routines, and focus on callisthenics and body-weight form of training. I enjoy music, and sometimes
-                    practice playing the guitar, although I am getting a bit rusty at that. Depending on lockdown restrictions,
+                    workout routines, and focus on callisthenics and body-weight forms of training. I enjoy music, and sometimes
+                    practise playing the guitar, although I am getting a bit rusty at that. Depending on lockdown restrictions,
                     I enjoy meeting up with friends, and meeting new people. Eagerly waiting for travel restrictions to ease off,
                     so that I can continue on my quest to travel to as many countries as possible, currently at 18.
                   </p>
