--- a/portfolio_server/templates/thank_you.html
+++ b/portfolio_server/templates/thank_you.html
@@ -60,7 +60,7 @@
           
           <div class="row">
             <div class="col-md-10 col-md-offset-1">
-               Than you! I will get in touch with you shortly :)
+               Thank you! I will get in touch with you shortly :)
 
             </div>
 
